feat: video-download local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=interview-manager
+
+spring.security.user.name=user
+spring.security.user.password=1234
+
+# ???? ?? ?? ??
+file.upload-dir=/Users/hansang-ahn/Desktop/??? ?? ???
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
